--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background: url('galaxy.jpg') fixed; /* Replace 'galaxy.jpg' with your actual image */
+    background: url('https://tse2.mm.bing.net/th?id=OIP.75f2PVMUhk04iDSUk3wdfQHaEK&pid=Api&P=0&h=220') fixed; /* Replace 'galaxy.jpg' with your actual image */
     background-size: cover;
     background-position: center;
     color: #fff;
