--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #ffffff;
+    color: #000000;
     overflow: hidden; /* Hide overflow to prevent scrollbar */
 }
 
